Date	Added
11/20
	* Initialized "day" variable in npc.c. [Valaris]
	* Added @whozeny. Shows list of top 50 online players and their zeny sorted from highest to lowest. [Valaris]
	* Added @happyhappyjoyjoy. Makes all players on server do a random emote. [Valaris]
	* Removed -funroll-loops from compile. (Do not re-add!) [Valaris]
	* Skill updates [celest]
	* Added check for max vending_max_value when reading config [kobra_k88]
	* Skill updates [celest]
          - Napalm vulcan, Enchant Deadly Poison, Slow Poison (based on jAthena 1066)
          - Create Deadly Poison, thanks to DracoRPG!
          - Added effect for Meteor Assault
        * Added night_darkness_level to battle_athena.conf. [celest]
          Use this to set 'how dark' it'll become during night time. Use 0 for default,
          or between 1-10. (Yeah, i know lots of people hated the original night! xP)
          Warning: It may cause errors with old exe's!

11/19
	* Re-added check for empty bottle when using aqua benedicta. [Valaris]
        * Fixed skills not showing after using @allskill [celest]

11/18
        * Added a line to @unmute, added @mute. [celest]
          Usage: @mute <time in minutes> <character name>
        * Added save_flag for skill_status_change_start [celest]
        * Fixed muting not being saved when you quit/change characters/log off [celest]
        * *Hopefully* fixed the skill tree problem where you have to use 49 skill 
          points first before 2nd job skills will show... please report any bugs found
          with it, thank you. [celest]
	* Added flag to pc_unequipitem (thanks to DracoRPG for suggestion) [celest]
	* Skill updates [celest]
	  - Updated Cloaking (thanks to orn), Endure
          - Pneuma (thanks to DracoRPG)
          - Changed sc_ id for Basilica
          - Cancel Basilica (100%) when caster moves or uses another skill
          - Updated Poison React (90%), Endure
          - Added SC_BLOCKSKILL, SC_SLOWDOWN