@@ -7774,6 +7774,8 @@ void clif_parse_Emotion(int fd, struct map_session_data *sd) {
 	if (battle_config.basic_skill_check == 0 || pc_checkskill(sd, NV_BASIC) >= 2) {
 		WBUFW(buf,0) = 0xc0;
 		WBUFL(buf,2) = sd->bl.id;
+		if(RFIFOB(fd,2)==34) // prevent use of the mute emote [Valaris]
+			return;
 		WBUFB(buf,6) = RFIFOB(fd,2);
 		clif_send(buf, packet_len_table[0xc0], &sd->bl, AREA);
 	} else
